2018-03-14      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* gm2/gm2-compiler/SymbolTable.mod:  (PutUnbounded)
          ensure that all dimensions prior to the requested dimension
	  has an entry in the array.  (NulSym is added).
	* gm2/gm2-compiler/M2GCCDeclare.mod:  (WalkFamilyOfUnbounded)
          check that unbounded is not NulSym before calling unboundedp.

	* gm2/gm2-compiler/M2Quads.mod:  (UnboundedVarLinkToArray)
          and (UnboundedNonVarLinkToArray) ensure that all
          parameters to BuildAdrFunction propagate the array
          and dimension operand stack.
          Fixes bugs exposed in
	  testsuite/gm2/iso/run/pass/adrunbounded3.mod

2018-02-19      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* gm2/gm2-compiler/M2Quads.mod:  (AssignHighField)
          check for ArraySym and use if actual parameter
          has different number of dimensions to formal
          parameter array.
	* gm2/gm2-compiler/M2Quads.mod:  (BuildConstHighFromSym)
          only access the single dimension when building high
          as the array will be referencing the desired dimension.
	  A temporary type will have been created.

2018-02-15      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* gm2/gm2-compiler/M2GenGCC.mod:  check and use lvalue op3
	  which points to the data for the unbounded quadruple.

2018-02-08      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* gm2/gm2-compiler/M2Quads.mod:  check open array actual
          parameter which is indexed and check the dimension against
	  formal parameters.

2018-02-07      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* gm2/Make-lang.in:  added LDFLAGS to the link of mc.

2018-01-28      Gaius Mulley <gaius@gnu.org>

	* gm2/bnf/mc-5.bnf:  regenerated.
	* gm2/mc-boot/GCmdArgs.c:  regenerated.
	* gm2/mc-boot/GFIO.c:  regenerated.
	* gm2/mc-boot/GStrIO.c:  regenerated.
	* gm2/mc-boot/GStringConvert.c:  regenerated.
	* gm2/mc-boot/Gdecl.c:  regenerated.
	* gm2/mc-boot/Gdecl.h:  regenerated.